Fix lack of color contrast for the project version and license selected on the Licenses page (#16582)
* Fix lack of color contrast for the project version and license selected on the Licenses page

* Fix background color instead

--- a/packages/help-extension/style/base.css
+++ b/packages/help-extension/style/base.css
@@ -214,8 +214,9 @@
   width: 100%;
 }
 
-.jp-Licenses-Grid.jp-RenderedHTMLCommon code {
+.jp-Licenses .jp-Licenses-Grid.jp-RenderedHTMLCommon code {
   background-color: transparent;
+  padding: 0;
 }
 
 .jp-Licenses-Grid.jp-RenderedHTMLCommon tr.jp-mod-selected {
